--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "control-system-server",
-  "packageManager": "yarn@4.10.3",
-  "type": "module",
-  "devDependencies": {
-    "@eslint/js": "^9.38.0",
-    "@types/node": "^24.9.1",
-    "eslint": "^9.38.0",
-    "globals": "^16.4.0",
-    "jiti": "^2.6.1",
-    "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.2"
-  }
+    "name": "control-system-server",
+    "packageManager": "yarn@4.10.3",
+    "type": "module",
+    "devDependencies": {
+        "@eslint/js": "^9.38.0",
+        "@types/koa": "^3",
+        "@types/node": "^24.9.1",
+        "eslint": "^9.38.0",
+        "globals": "^16.4.0",
+        "jiti": "^2.6.1",
+        "nodemon": "^3.1.10",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.9.3",
+        "typescript-eslint": "^8.46.2"
+    },
+    "dependencies": {
+        "koa": "^3.1.1",
+        "koa-router": "^14.0.0",
+        "mongoose": "^8.19.2"
+    }
 }
