--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "koa": "^3.1.1",
         "koa-router": "^14.0.0",
         "mongoose": "^8.19.2"
+    },
+    "scripts": {
+        "build": "tsc -p ./tsconfig.json "
     }
 }
