--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,10 +35,11 @@
         "noUncheckedSideEffectImports": true,
         "moduleDetection": "force",
         "skipLibCheck": true,
+        "outDir": "dist/",
+        "rootDir": "src/"
     },
     "include": [
         "src/***/*",
-        "src/*",
-        "eslint.config.mts"
+        "src/*"
     ]
 }
