Add VSCode tasks and update ESLint and TypeScript configs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,11 +35,11 @@
         "noUncheckedSideEffectImports": true,
         "moduleDetection": "force",
         "skipLibCheck": true,
-        "outDir": "dist/",
-        "rootDir": "src/"
+        "outDir": "dist/"
     },
     "include": [
         "src/***/*",
-        "src/*"
+        "src/*",
+        "eslint.config.mts"
     ]
 }
