Add nodemon config and update TypeScript settings

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "mongoose": "^8.19.2"
     },
     "scripts": {
-        "build": "tsc -p ./tsconfig.json "
+        "build": "tsc -p ./tsconfig.json",
+        "dev": "nodemon"
     }
 }
