--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,9 @@
         "noUncheckedSideEffectImports": true,
         "moduleDetection": "force",
         "skipLibCheck": true,
-        "outDir": "dist/"
+        "outDir": "dist/",
+        "allowImportingTsExtensions": true,
+        "noEmit": true
     },
     "include": [
         "src/***/*",
