Add koa-bodyparser and related type definitions

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "devDependencies": {
         "@eslint/js": "^9.38.0",
         "@types/koa": "^3",
+        "@types/koa-bodyparser": "^4.3.13",
+        "@types/koa-router": "^7.4.9",
         "@types/node": "^24.9.1",
         "eslint": "^9.38.0",
         "globals": "^16.4.0",
@@ -16,6 +18,7 @@
     },
     "dependencies": {
         "koa": "^3.1.1",
+        "koa-bodyparser": "^4.4.1",
         "koa-router": "^14.0.0",
         "mongoose": "^8.19.2"
     },
