--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+actix-cors = "0.7.1"
+actix-web = "4.12.1"
+mongodb = "3.5.1"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.149"
